# opengl-samples

./: .clang-format  .gitignore  CMakeLists.txt  README.md  RESERVED!.txt  data.pk3  main.cpp  shoot_them.pro  vcpkg.json  xmake.lua
Editor/: CMakeLists.txt  forest1.description  main.cpp
Editor/Resources/: gui.xml
Editor/Resources/Fonts/: calibri.xml
Editor/Sources/: Application.cpp  Application.h  ApplicationDelegate.cpp  ApplicationDelegate.h  CameraSceneNodeAnimator.cpp  CameraSceneNodeAnimator.h  GUIElementId.h  GameData.cpp  GameData.h  GameManagerNodeData.cpp  GameManagerNodeData.h  GameManagerTree.cpp  GameManagerTree.h  IrrlichtEventReceiver.cpp  IrrlichtEventReceiver.h  Level.cpp  Level.h  LevelEntity.cpp  LevelEntity.h  Light.cpp  Light.h  Target.cpp  Target.h  main.cpp
Editor/src/: Application.cpp  Application.h  ApplicationDelegate.cpp  ApplicationDelegate.h  CameraSceneNodeAnimator.cpp  CameraSceneNodeAnimator.h  GUIElementId.h  GameData.cpp  GameData.h  GameManagerNodeData.cpp  GameManagerNodeData.h  GameManagerTree.cpp  GameManagerTree.h  IrrlichtEventReceiver.cpp  IrrlichtEventReceiver.h  Level.cpp  Level.h  LevelEntity.cpp  LevelEntity.h  Light.cpp  Light.h  SaveFileDialog.cpp  SaveFileDialog.h  Target.cpp  Target.h  main.cpp
Game/: CMakeLists.txt
Game/Data/: levels.xml  settings.xml
Game/Resources/Fonts/: candyshop_18px.xml  candyshop_24px.xml  zoombieland.xml  zoombieland_24px.xml  zoombieland_24px_noalpha.xml  zoombieland_48px.xml
Game/Resources/shaders/: identity.vert.glsl
Game/Sources/: ActionDispatcher.cpp  ActionDispatcher.h  Application.cpp  Application.h  GameState.cpp  GameState.h  InputHandler.cpp  InputHandler.h  IrrlichtEventReceiver.cpp  IrrlichtEventReceiver.h  IrrlichtHUD.cpp  IrrlichtHUD.h  IrrlichtRenderer.cpp  IrrlichtRenderer.h  Level.cpp  Level.h  ModernResourceManager.cpp  ModernResourceManager.h  PlayerState.cpp  QueueAction.cpp  QueueAction.h  Renderer.h  ResourceManager.h  main.cpp  score.cpp  score.h  settings.h
Game/src/: ActionDispatcher.cpp  ActionDispatcher.h  Application.cpp  Application.h  CDrunkShaderCallback.cpp  CDrunkShaderCallback.h  CScreenQuadSceneNode.cpp  CScreenQuadSceneNode.h  GameState.cpp  GameState.h  IrrlichtEventReceiver.cpp  IrrlichtEventReceiver.h  IrrlichtHUD.cpp  IrrlichtHUD.h  IrrlichtRenderer.cpp  IrrlichtRenderer.h  IrrlichtSceneNode.h  Level.cpp  Level.h  ModernResourceManager.cpp  ModernResourceManager.h  PlayerState.cpp  PlayerState.h  QueueAction.cpp  QueueAction.h  Renderer.h  ResourceManager.h  SceneNode.cpp  SceneNode.h  Score.cpp  Settings.h  Vector3.cpp  Vector3.h  main.cpp  stdafx.h
Game/src/core/: ActionDispatcher.cpp  ActionDispatcher.h  Application.cpp  Application.h  ModernResourceManager.h  QueueAction.cpp  QueueAction.h  (+7 more)
samples/: CMakeLists.txt
samples/01-create-window/: CMakeLists.txt  main.cpp  xmake.lua
samples/01-hello-window/: CMakeLists.txt  main.cpp  xmake.lua
samples/02-hello-opengl/: CMakeLists.txt  main.cpp  xmake.lua
samples/02-init-opengl/: CMakeLists.txt  main.cpp  xmake.lua
samples/03-fps-camera/: CMakeLists.txt  main.cpp  xmake.lua
samples/03-hello-camera/: CMakeLists.txt  main.cpp  xmake.lua
samples/04-hello-mesh/: CMakeLists.txt  main.cpp  xmake.lua
samples/04-render-mesh/: CMakeLists.txt  main.cpp  xmake.lua
samples/05-texture/: CMakeLists.txt  main.cpp  xmake.lua
samples/06-lighting/: CMakeLists.txt  main.cpp  xmake.lua
samples/07-model-loading/: CMakeLists.txt  main.cpp  xmake.lua
samples/08-frame-buffer/: CMakeLists.txt  main.cpp  xmake.lua
samples/09-shadow-mapping/: CMakeLists.txt  light_slices_projections.txt  main.cpp  xmake.lua
samples/10-particles/: CMakeLists.txt  main.cpp  xmake.lua
samples/10-scripting/: CMakeLists.txt  main.cpp  xmake.lua
samples/11-instance-rendering/: CMakeLists.txt  main.cpp  xmake.lua
samples/12-cascade-shadow-mapping/: CMakeLists.txt  main.cpp  xmake.lua
samples/13-terrain/: CMakeLists.txt  main.cpp  xmake.lua
samples/14-point-light/: CMakeLists.txt  main.cpp  xmake.lua
samples/15-bloom/: CMakeLists.txt  main.cpp  xmake.lua
samples/16-anti-aliasing/: CMakeLists.txt  main.cpp  xmake.lua
samples/16-skybox/: main.cpp  xmake.lua
samples/17-reflection/: xmake.lua
samples/17-skybox/: CMakeLists.txt  main.cpp  xmake.lua
samples/18-reflection/: CMakeLists.txt  main.cpp  xmake.lua
samples/19-gui/: CMakeLists.txt  ImGuiSfmlBackend.cpp  ImGuiSfmlBackend.hpp  main.cpp  xmake.lua
samples/20-scripting/: CMakeLists.txt  main.cpp  xmake.lua
samples/21-deferred-rendering/: CMakeLists.txt  main.cpp  xmake.lua
samples/22-fast-approximation-anti-aliasing/: CMakeLists.txt  main.cpp  xmake.lua
samples/22-fxaa/: CMakeLists.txt  main.cpp  xmake.lua
samples/23-msaa/: CMakeLists.txt  main.cpp  xmake.lua
samples/23-multi-sample-anti-aliasing/: CMakeLists.txt  main.cpp  xmake.lua
samples/24-screen-space-ambient-occlusion/: CMakeLists.txt  main.cpp  xmake.lua
samples/25-horizon-based-ambient-occlusion/: CMakeLists.txt  main.cpp  xmake.lua
samples/26-raymarching/: CMakeLists.txt  main.cpp  xmake.lua
samples/27-animated-model/: CMakeLists.txt  main.cpp  xmake.lua
samples/28-multi-draw-indirect/: CMakeLists.txt  main.cpp  xmake.lua
samples/demo-scene-1/: CMakeLists.txt  main.cpp  xmake.lua
samples/demo-scene-2/: AssimpMeshLoader.cpp  AssimpMeshLoader.hpp  CMakeLists.txt  Mesh.cpp  Mesh.hpp  Skybox.cpp  Skybox.hpp  main.cpp  stdafx.hpp  xmake.lua
samples/demo-scene-3/: AbstractParticleParamsGenerator.cpp  AbstractParticleParamsGenerator.hpp  CMakeLists.txt  ImGuiSfmlBackend.cpp  ImGuiSfmlBackend.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Particle.cpp  Particle.hpp  SimpleParticle.cpp  SimpleParticle.hpp  UniformParticleParamsGenerator.cpp  UniformParticleParamsGenerator.hpp  main.cpp  xmake.lua
samples/hello-world/: CMakeLists.txt  main.cpp
samples/media/: depth-fragment.glsl  duck.mtl  grass1.mtl  grass2.mtl  grass3.glb  grass3.gltf  grass3.mtl  house1.1.mtl  lantern.mtl  palm.gltf  palm.mtl  pen-lowpoly.mtl  pen1.mtl  pillow1.mtl  plate1.mtl  pot1.mtl  table2.mtl
(+215 files in other folders)
