cmake_minimum_required(VERSION 3.20 FATAL_ERROR)

project(shoot-them VERSION 1.0.2 LANGUAGES CXX)

add_subdirectory(samples/01-create-window)
add_subdirectory(samples/02-init-opengl)
add_subdirectory(samples/03-fps-camera)
add_subdirectory(samples/04-render-mesh)
add_subdirectory(samples/05-texture)
add_subdirectory(samples/06-lighting)
add_subdirectory(samples/07-model-loading)
add_subdirectory(samples/08-frame-buffer)
add_subdirectory(samples/09-shadow-mapping)
add_subdirectory(samples/10-particles)
add_subdirectory(samples/11-instance-rendering)
add_subdirectory(samples/12-cascade-shadow-mapping)
add_subdirectory(samples/13-terrain)
add_subdirectory(samples/14-point-light)
add_subdirectory(samples/15-bloom)
add_subdirectory(samples/16-anti-aliasing)
add_subdirectory(samples/17-skybox)
add_subdirectory(samples/18-reflection)
# add_subdirectory(samples/19-gui)
# add_subdirectory(samples/20-scripting)
add_subdirectory(samples/21-deferred-rendering)
add_subdirectory(samples/demo-scene-1)
