cmake_minimum_required(VERSION 3.20 FATAL_ERROR)

project(samples VERSION 1.1.0 LANGUAGES CXX)

add_subdirectory(01-create-window)
add_subdirectory(02-init-opengl)
add_subdirectory(03-fps-camera)
add_subdirectory(04-render-mesh)
add_subdirectory(05-texture)
add_subdirectory(06-lighting)
add_subdirectory(07-model-loading)
add_subdirectory(08-frame-buffer)
add_subdirectory(09-shadow-mapping)
add_subdirectory(10-particles)
add_subdirectory(11-instance-rendering)
add_subdirectory(12-cascade-shadow-mapping)
add_subdirectory(13-terrain)
add_subdirectory(14-point-light)
add_subdirectory(15-bloom)
add_subdirectory(16-anti-aliasing)
add_subdirectory(17-skybox)
add_subdirectory(18-reflection)
add_subdirectory(19-gui)
# add_subdirectory(20-scripting)
add_subdirectory(21-deferred-rendering)
add_subdirectory(22-fast-approximation-anti-aliasing)
add_subdirectory(23-multi-sample-anti-aliasing)
add_subdirectory(24-screen-space-ambient-occlusion)
add_subdirectory(25-horizon-based-ambient-occlusion)
add_subdirectory(26-raymarching)
add_subdirectory(27-animated-model)
add_subdirectory(28-multi-draw-indirect)
add_subdirectory(demo-scene-1)
add_subdirectory(demo-scene-2)
